--- a/public/edit.html
+++ b/public/edit.html
@@ -146,7 +146,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
   <script>
-  const API_BASE = 'https://video-dashboard-backend.onrender.com';
   let videos = [];
   let departments = [];
   let quill = new Quill('#editor', {
@@ -162,79 +161,76 @@
     }
   });
 
-// ✅ تحميل نافذة تسجيل الدخول كما في dashboard.html
-fetch("login-modal.html")
-  .then(res => res.text())
-  .then(html => {
-    document.getElementById("loginModalContainer").innerHTML = html;
+  // ✅ تحميل نافذة تسجيل الدخول كما في dashboard.html
+  fetch("login-modal.html")
+    .then(res => res.text())
+    .then(html => {
+      document.getElementById("loginModalContainer").innerHTML = html;
 
-    const passwordModal = new bootstrap.Modal(document.getElementById("passwordModal"), {
-      backdrop: 'static',
-      keyboard: false
-    });
+      const passwordModal = new bootstrap.Modal(document.getElementById("passwordModal"), {
+        backdrop: 'static',
+        keyboard: false
+      });
 
-    const passwordInput = document.getElementById("dashboardPassword");
-    const submitPassword = document.getElementById("submitPassword");
-    const closeModal = document.querySelector("#passwordModal .btn-close");
+      const passwordInput = document.getElementById("dashboardPassword");
+      const submitPassword = document.getElementById("submitPassword");
+      const closeModal = document.querySelector("#passwordModal .btn-close");
 
-    // إخفاء زر الإغلاق
-    if (closeModal) closeModal.style.display = "none";
+      // إخفاء زر الإغلاق
+      if (closeModal) closeModal.style.display = "none";
 
-    // إظهار نافذة تسجيل الدخول عند فتح الصفحة
-    passwordModal.show();
-document.getElementById("passwordModal").addEventListener("shown.bs.modal", () => {
-  passwordInput.focus();
-});
+      // إظهار نافذة تسجيل الدخول عند فتح الصفحة
+      passwordModal.show();
+      document.getElementById("passwordModal").addEventListener("shown.bs.modal", () => {
+        passwordInput.focus();
+      });
 
-
-    // عند الضغط على إدخال أو زر الدخول
-    function tryLogin() {
-      const password = passwordInput.value.trim();
-      fetch("/api/verify-password", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ password })
-      })
-        .then(res => res.json())
-        .then(data => {
-         if (data.success) {
-  sessionStorage.setItem("isLoggedIn", "true");
-  passwordModal.hide();
-}
- else {
-            alert("❌ كلمة المرور غير صحيحة");
-            passwordInput.value = "";
-            passwordInput.focus();
-          }
+      // عند الضغط على إدخال أو زر الدخول
+      function tryLogin() {
+        const password = passwordInput.value.trim();
+        fetch("/api/verify-password", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ password })
         })
-        .catch(() => alert("⚠️ خطأ في الاتصال بالخادم"));
-    }
-
-    passwordInput.addEventListener("keypress", e => {
-      if (e.key === "Enter") tryLogin();
-    });
-    submitPassword.addEventListener("click", tryLogin);
-// عند الضغط على زر إلغاء => توجيه إلى dashboard.html
-const cancelBtn = document.getElementById("cancelBtn");
-if (cancelBtn) {
-  cancelBtn.addEventListener("click", () => {
-    window.location.href = "dashboard.html";
-  });
-}
-
-    // عند إغلاق النافذة => توجيه إلى dashboard.html
-    document.getElementById("passwordModal").addEventListener("hidden.bs.modal", () => {
-      if (!sessionStorage.getItem("isLoggedIn")) {
-        window.location.href = "dashboard.html";
+          .then(res => res.json())
+          .then(data => {
+            if (data.success) {
+              sessionStorage.setItem("isLoggedIn", "true");
+              passwordModal.hide();
+            } else {
+              alert("❌ كلمة المرور غير صحيحة");
+              passwordInput.value = "";
+              passwordInput.focus();
+            }
+          })
+          .catch(() => alert("⚠️ خطأ في الاتصال بالخادم"));
       }
+
+      passwordInput.addEventListener("keypress", e => {
+        if (e.key === "Enter") tryLogin();
+      });
+      submitPassword.addEventListener("click", tryLogin);
+
+      // عند الضغط على زر إلغاء => توجيه إلى dashboard.html
+      const cancelBtn = document.getElementById("cancelBtn");
+      if (cancelBtn) {
+        cancelBtn.addEventListener("click", () => {
+          window.location.href = "dashboard.html";
+        });
+      }
+
+      // عند إغلاق النافذة => توجيه إلى dashboard.html
+      document.getElementById("passwordModal").addEventListener("hidden.bs.modal", () => {
+        if (!sessionStorage.getItem("isLoggedIn")) {
+          window.location.href = "dashboard.html";
+        }
+      });
     });
-  });
-
-
 
   async function fetchDepartments() {
     try {
-      const res = await fetch(`${API_BASE}/api/departments`);
+      const res = await fetch("/api/departments");
       departments = await res.json();
     } catch (err) {
       console.error('فشل تحميل الأقسام:', err);
@@ -253,7 +249,7 @@ if (cancelBtn) {
   }
 
   async function fetchVideos() {
-    const res = await fetch(`${API_BASE}/api/videos`);
+    const res = await fetch("/api/videos");
     videos = await res.json();
     populateDepartmentOptions();
   }
@@ -379,7 +375,7 @@ if (cancelBtn) {
       url: document.getElementById('editUrl').value,
       department: document.getElementById('editDeptSelect').value
     };
-    await fetch(`${API_BASE}/api/videos/${id}`, {
+    await fetch(`/api/videos/${id}`, {
       method: 'PUT',
       headers: { 'Content-Type': 'application/json' },
       body: JSON.stringify(updated)
@@ -391,7 +387,7 @@ if (cancelBtn) {
 
   async function deleteVideo(id) {
     if (!confirm('❌ هل أنت متأكد من حذف هذا الفيديو؟')) return;
-    await fetch(`${API_BASE}/api/videos/${id}`, { method: 'DELETE' });
+    await fetch(`/api/videos/${id}`, { method: 'DELETE' });
     alert('🗑️ تم حذف الفيديو');
     fetchVideos();
   }
