--- a/public/add.html
+++ b/public/add.html
@@ -55,6 +55,9 @@
     <div id="confirmation" class="alert alert-success mt-3 d-none"></div>
   </div>
 
+  <!-- ✅ نافذة تسجيل الدخول -->
+  <div id="loginModalContainer"></div>
+
 <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
 <script>
 const quill = new Quill('#descriptionEditor', {
@@ -79,18 +82,15 @@ function updatePreview() {
   if (link.includes("youtube.com/watch?v=")) {
     const videoId = link.split("v=")[1].split("&")[0];
     embedUrl = `https://www.youtube.com/embed/${videoId}`;
-
-  // Google Drive
   } else if (link.includes("drive.google.com/file/d/")) {
+    // Google Drive
     const match = link.match(/\/file\/d\/(.*?)(\/|$)/);
     if (match) embedUrl = `https://drive.google.com/file/d/${match[1]}/preview`;
-
-  // SharePoint / OneDrive Stream (embed.aspx مباشرة)
   } else if (link.includes("sharepoint.com/") && link.includes("/embed.aspx")) {
+    // OneDrive / SharePoint embed
     embedUrl = link;
-
-  // SharePoint / OneDrive Stream (تحويل من stream.aspx إلى embed.aspx)
   } else if (link.includes("sharepoint.com/") && link.includes("/stream.aspx")) {
+    // OneDrive / SharePoint stream → embed
     const uniqueIdMatch = link.match(/UniqueId=([a-zA-Z0-9\-]+)/);
     if (uniqueIdMatch) {
       embedUrl = `https://ymkh-my.sharepoint.com/personal/laith_obaidat_iu_edu_jo/_layouts/15/embed.aspx?UniqueId=${uniqueIdMatch[1]}&embed=%7B%22ust%22%3Atrue%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create`;
@@ -177,5 +177,70 @@ document.getElementById('videoForm').addEventListener('submit', async e => {
 
 loadDepartments();
 </script>
+
+<!-- ✅ حماية تسجيل الدخول مثل dashboard.html -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+  fetch("login-modal.html")
+    .then(res => res.text())
+    .then(html => {
+      document.getElementById("loginModalContainer").innerHTML = html;
+
+      const passwordModalEl = document.getElementById("passwordModal");
+      const passwordModal = new bootstrap.Modal(passwordModalEl, {
+        backdrop: 'static',
+        keyboard: false
+      });
+      passwordModal.show();
+
+      // إخفاء زر الإغلاق العلوي ✖
+      document.querySelectorAll("#passwordModal .btn-close")
+        .forEach(btn => btn.style.display = "none");
+
+      // زر إلغاء → العودة للرئيسية
+      const cancelBtn = document.querySelector("#passwordModal .btn-secondary");
+      if (cancelBtn) {
+        cancelBtn.addEventListener("click", () => {
+          window.location.href = "index.html";
+        });
+      }
+
+      const passwordInput = document.getElementById("dashboardPassword");
+
+      // ✅ التركيز يتم بعد فتح المودال بالكامل
+      passwordModalEl.addEventListener("shown.bs.modal", () => {
+        passwordInput.focus();
+      });
+
+      // ✅ وظيفة التحقق
+      async function verifyPassword() {
+        const password = passwordInput.value;
+        const res = await fetch("/api/verify-password", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ password })
+        });
+
+        if (res.status === 200) {
+          passwordModal.hide();
+        } else {
+          alert("❌ كلمة المرور غير صحيحة");
+ passwordInput.value = "";
+            passwordInput.focus();
+          }
+        }
+
+        // عند الضغط على زر دخول
+        document.getElementById("confirmDashboardAccess")
+          .addEventListener("click", verifyPassword);
+
+        // ✅ عند الضغط على Enter
+        passwordInput.addEventListener("keydown", function (e) {
+          if (e.key === "Enter") {
+            verifyPassword();
+          }
+        });
+      });
+  </script>
 </body>
 </html>
