--- a/public/add.html
+++ b/public/add.html
@@ -178,69 +178,76 @@ document.getElementById('videoForm').addEventListener('submit', async e => {
 loadDepartments();
 </script>
 
-<!-- ✅ حماية تسجيل الدخول مثل dashboard.html -->
+<!-- ✅ حماية تسجيل الدخول -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script>
-  fetch("login-modal.html")
-    .then(res => res.text())
-    .then(html => {
-      document.getElementById("loginModalContainer").innerHTML = html;
+  fetch("/api/check-session")
+    .then(res => res.json())
+    .then(data => {
+      if (!data.authenticated) {
+        // ❌ الجلسة غير صالحة → اعرض نافذة تسجيل الدخول
+        fetch("login-modal.html")
+          .then(res => res.text())
+          .then(html => {
+            document.getElementById("loginModalContainer").innerHTML = html;
 
-      const passwordModalEl = document.getElementById("passwordModal");
-      const passwordModal = new bootstrap.Modal(passwordModalEl, {
-        backdrop: 'static',
-        keyboard: false
-      });
-      passwordModal.show();
+            const passwordModalEl = document.getElementById("passwordModal");
+            const passwordModal = new bootstrap.Modal(passwordModalEl, {
+              backdrop: 'static',
+              keyboard: false
+            });
+            passwordModal.show();
 
-      // إخفاء زر الإغلاق العلوي ✖
-      document.querySelectorAll("#passwordModal .btn-close")
-        .forEach(btn => btn.style.display = "none");
+            // إخفاء زر الإغلاق العلوي ✖
+            document.querySelectorAll("#passwordModal .btn-close")
+              .forEach(btn => btn.style.display = "none");
 
-      // زر إلغاء → العودة للرئيسية
-      const cancelBtn = document.querySelector("#passwordModal .btn-secondary");
-      if (cancelBtn) {
-        cancelBtn.addEventListener("click", () => {
-          window.location.href = "index.html";
-        });
+            // زر إلغاء → العودة للرئيسية
+            const cancelBtn = document.querySelector("#passwordModal .btn-secondary");
+            if (cancelBtn) {
+              cancelBtn.addEventListener("click", () => {
+                window.location.href = "index.html";
+              });
+            }
+
+            const passwordInput = document.getElementById("dashboardPassword");
+
+            // ✅ التركيز بعد الفتح
+            passwordModalEl.addEventListener("shown.bs.modal", () => {
+              passwordInput.focus();
+            });
+
+            // ✅ وظيفة التحقق
+            async function verifyPassword() {
+              const password = passwordInput.value;
+              const res = await fetch("/api/verify-password", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ password })
+              });
+
+              if (res.status === 200) {
+                passwordModal.hide();
+              } else {
+                alert("❌ كلمة المرور غير صحيحة");
+                passwordInput.value = "";
+                passwordInput.focus();
+              }
+            }
+
+            // عند الضغط على زر دخول
+            document.getElementById("confirmDashboardAccess")
+              .addEventListener("click", verifyPassword);
+
+            // عند الضغط على Enter
+            passwordInput.addEventListener("keydown", function (e) {
+              if (e.key === "Enter") {
+                verifyPassword();
+              }
+            });
+          });
       }
-
-      const passwordInput = document.getElementById("dashboardPassword");
-
-      // ✅ التركيز يتم بعد فتح المودال بالكامل
-      passwordModalEl.addEventListener("shown.bs.modal", () => {
-        passwordInput.focus();
-      });
-
-      // ✅ وظيفة التحقق
-      async function verifyPassword() {
-        const password = passwordInput.value;
-        const res = await fetch("/api/verify-password", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ password })
-        });
-
-        if (res.status === 200) {
-          passwordModal.hide();
-        } else {
-          alert("❌ كلمة المرور غير صحيحة");
- passwordInput.value = "";
-            passwordInput.focus();
-          }
-        }
-
-        // عند الضغط على زر دخول
-        document.getElementById("confirmDashboardAccess")
-          .addEventListener("click", verifyPassword);
-
-        // ✅ عند الضغط على Enter
-        passwordInput.addEventListener("keydown", function (e) {
-          if (e.key === "Enter") {
-            verifyPassword();
-          }
-        });
-      });
-  </script>
+    });
+</script>
 </body>
 </html>
