--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -72,74 +72,10 @@
     </div>
   </div>
 
-  <!-- ✅ استدعاء نافذة تسجيل الدخول -->
+  <!-- ✅ نافذة تسجيل الدخول -->
   <div id="loginModalContainer"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-    fetch("login-modal.html")
-      .then(res => res.text())
-      .then(html => {
-        document.getElementById("loginModalContainer").innerHTML = html;
-
-        const passwordModalEl = document.getElementById("passwordModal");
-        const passwordModal = new bootstrap.Modal(passwordModalEl, {
-          backdrop: 'static',
-          keyboard: false
-        });
-        passwordModal.show();
-
-        // إخفاء زر الإغلاق العلوي ✖
-        document.querySelectorAll("#passwordModal .btn-close")
-          .forEach(btn => btn.style.display = "none");
-
-        // زر إلغاء → العودة للرئيسية
-        const cancelBtn = document.querySelector("#passwordModal .btn-secondary");
-        if (cancelBtn) {
-          cancelBtn.addEventListener("click", () => {
-            window.location.href = "index.html";
-          });
-        }
-
-        const passwordInput = document.getElementById("dashboardPassword");
-
-        // ✅ التركيز يتم بعد فتح المودال بالكامل
-        passwordModalEl.addEventListener("shown.bs.modal", () => {
-          passwordInput.focus();
-        });
-
-        // ✅ وظيفة التحقق
-        async function verifyPassword() {
-          const password = passwordInput.value;
-          const res = await fetch("/api/verify-password", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ password })
-          });
-
-          if (res.status === 200) {
-            passwordModal.hide();
-          } else {
-            alert("❌ كلمة المرور غير صحيحة");
-            passwordInput.value = "";
-            passwordInput.focus();
-          }
-        }
-
-        // عند الضغط على زر دخول
-        document.getElementById("confirmDashboardAccess")
-          .addEventListener("click", verifyPassword);
-
-        // ✅ عند الضغط على Enter
-        passwordInput.addEventListener("keydown", function (e) {
-          if (e.key === "Enter") {
-            verifyPassword();
-          }
-        });
-      });
-  </script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="login-guard.js"></script>
-
+  <script src="login-guard.js"></script>
 </body>
 </html>
