--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -44,6 +44,10 @@
           <div class="card-icon">➕</div>
           <a href="add.html">إضافة فيديو</a>
         </div>
+<div class="text-end mb-3">
+  <button id="logoutBtn" class="btn btn-danger">تسجيل الخروج</button>
+</div>
+
       </div>
       <div class="col-md-4">
         <div class="dashboard-card">
@@ -77,5 +81,15 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="login-guard.js"></script>
+  <script>
+  document.getElementById("logoutBtn").addEventListener("click", () => {
+    // 🧹 مسح جميع الجلسات الخاصة بالدخول
+    sessionStorage.removeItem("loggedInAt");
+
+    // 🔄 التوجيه إلى الصفحة الرئيسية
+    window.location.href = "index.html";
+  });
+</script>
+
 </body>
 </html>
