--- a/public/add.html
+++ b/public/add.html
@@ -55,199 +55,123 @@
     <div id="confirmation" class="alert alert-success mt-3 d-none"></div>
   </div>
 
-  <!-- ✅ نافذة تسجيل الدخول -->
+  <!-- ✅ مكان لإدخال نافذة تسجيل الدخول -->
   <div id="loginModalContainer"></div>
 
-<script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
-<script>
-const quill = new Quill('#descriptionEditor', {
-  theme: 'snow'
-});
-</script>
+  <!-- المكتبات -->
+  <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-<script>
-const API_BASE = 'https://video-dashboard-backend.onrender.com';
+  <!-- سكربتات الصفحة -->
+  <script>
+    const quill = new Quill('#descriptionEditor', { theme: 'snow' });
+    const API_BASE = 'https://video-dashboard-backend.onrender.com';
 
-function updatePreview() {
-  const link = document.getElementById('url').value.trim();
-  const preview = document.getElementById('preview');
-  if (!link) { 
-    preview.innerHTML = ''; 
-    return; 
-  }
+    function updatePreview() {
+      const link = document.getElementById('url').value.trim();
+      const preview = document.getElementById('preview');
+      if (!link) { 
+        preview.innerHTML = ''; 
+        return; 
+      }
+      let embedUrl = null;
 
-  let embedUrl = null;
+      // YouTube
+      if (link.includes("youtube.com/watch?v=")) {
+        const videoId = link.split("v=")[1].split("&")[0];
+        embedUrl = `https://www.youtube.com/embed/${videoId}`;
+      } else if (link.includes("drive.google.com/file/d/")) {
+        // Google Drive
+        const match = link.match(/\/file\/d\/(.*?)(\/|$)/);
+        if (match) embedUrl = `https://drive.google.com/file/d/${match[1]}/preview`;
+      } else if (link.includes("sharepoint.com/") && link.includes("/embed.aspx")) {
+        // OneDrive / SharePoint embed
+        embedUrl = link;
+      } else if (link.includes("sharepoint.com/") && link.includes("/stream.aspx")) {
+        // OneDrive / SharePoint stream → embed
+        const uniqueIdMatch = link.match(/UniqueId=([a-zA-Z0-9\-]+)/);
+        if (uniqueIdMatch) {
+          embedUrl = `https://ymkh-my.sharepoint.com/personal/laith_obaidat_iu_edu_jo/_layouts/15/embed.aspx?UniqueId=${uniqueIdMatch[1]}&embed=%7B%22ust%22%3Atrue%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create`;
+        }
+      }
 
-  // YouTube
-  if (link.includes("youtube.com/watch?v=")) {
-    const videoId = link.split("v=")[1].split("&")[0];
-    embedUrl = `https://www.youtube.com/embed/${videoId}`;
-  } else if (link.includes("drive.google.com/file/d/")) {
-    // Google Drive
-    const match = link.match(/\/file\/d\/(.*?)(\/|$)/);
-    if (match) embedUrl = `https://drive.google.com/file/d/${match[1]}/preview`;
-  } else if (link.includes("sharepoint.com/") && link.includes("/embed.aspx")) {
-    // OneDrive / SharePoint embed
-    embedUrl = link;
-  } else if (link.includes("sharepoint.com/") && link.includes("/stream.aspx")) {
-    // OneDrive / SharePoint stream → embed
-    const uniqueIdMatch = link.match(/UniqueId=([a-zA-Z0-9\-]+)/);
-    if (uniqueIdMatch) {
-      embedUrl = `https://ymkh-my.sharepoint.com/personal/laith_obaidat_iu_edu_jo/_layouts/15/embed.aspx?UniqueId=${uniqueIdMatch[1]}&embed=%7B%22ust%22%3Atrue%7D&referrer=StreamWebApp&referrerScenario=EmbedDialog.Create`;
+      preview.innerHTML = embedUrl 
+        ? `<iframe src="${embedUrl}" allowfullscreen></iframe>` 
+        : `<div class="alert alert-warning">⚠️ لا يمكن عرض هذا الرابط داخل المعاينة.</div>`;
     }
-  }
 
-  preview.innerHTML = embedUrl 
-    ? `<iframe src="${embedUrl}" allowfullscreen></iframe>` 
-    : `<div class="alert alert-warning">⚠️ لا يمكن عرض هذا الرابط داخل المعاينة.</div>`;
-}
+    async function loadDepartments() {
+      const res = await fetch(`${API_BASE}/api/departments`);
+      const departments = await res.json();
+      const select = document.getElementById('department');
+      select.innerHTML = '<option value="">-- اختر القسم --</option>';
+      departments.forEach(dep => {
+        const opt = document.createElement('option');
+        opt.value = dep.name;
+        opt.textContent = dep.name;
+        opt.dataset.id = dep._id;
+        select.appendChild(opt);
+      });
+    }
 
-// جلب الأقسام من قاعدة البيانات
-async function loadDepartments() {
-  const res = await fetch(`${API_BASE}/api/departments`);
-  const departments = await res.json();
-  const select = document.getElementById('department');
-  select.innerHTML = '<option value="">-- اختر القسم --</option>';
-  departments.forEach(dep => {
-    const opt = document.createElement('option');
-    opt.value = dep.name;
-    opt.textContent = dep.name;
-    opt.dataset.id = dep._id;
-    select.appendChild(opt);
-  });
-}
+    async function addDepartmentPrompt() {
+      const name = prompt("🆕 أدخل اسم القسم الجديد:");
+      if (!name) return;
+      const res = await fetch(`${API_BASE}/api/departments`, {
+        method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify({ name })
+      });
+      if (res.ok) loadDepartments();
+    }
 
-// إضافة قسم جديد
-async function addDepartmentPrompt() {
-  const name = prompt("🆕 أدخل اسم القسم الجديد:");
-  if (!name) return;
-  const res = await fetch(`${API_BASE}/api/departments`, {
-    method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify({ name })
-  });
-  if (res.ok) loadDepartments();
-}
+    async function editDepartmentPrompt() {
+      const select = document.getElementById('department');
+      const selected = select.options[select.selectedIndex];
+      if (!selected || !selected.dataset.id) return alert("❌ اختر القسم أولاً");
+      const newName = prompt("✏️ أدخل الاسم الجديد للقسم:", selected.value);
+      if (!newName) return;
+      const res = await fetch(`${API_BASE}/api/departments/${selected.dataset.id}`, {
+        method: 'PUT', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify({ name: newName })
+      });
+      if (res.ok) loadDepartments();
+    }
 
-// تعديل القسم الحالي
-async function editDepartmentPrompt() {
-  const select = document.getElementById('department');
-  const selected = select.options[select.selectedIndex];
-  if (!selected || !selected.dataset.id) return alert("❌ اختر القسم أولاً");
-  const newName = prompt("✏️ أدخل الاسم الجديد للقسم:", selected.value);
-  if (!newName) return;
-  const res = await fetch(`${API_BASE}/api/departments/${selected.dataset.id}`, {
-    method: 'PUT', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify({ name: newName })
-  });
-  if (res.ok) loadDepartments();
-}
+    async function deleteDepartment() {
+      const select = document.getElementById('department');
+      const selected = select.options[select.selectedIndex];
+      if (!selected || !selected.dataset.id) return alert("❌ اختر القسم أولاً");
+      if (!confirm(`⚠️ هل تريد حذف القسم "${selected.value}"؟`)) return;
+      const res = await fetch(`${API_BASE}/api/departments/${selected.dataset.id}`, { method: 'DELETE' });
+      if (res.ok) loadDepartments();
+    }
 
-// حذف القسم الحالي
-async function deleteDepartment() {
-  const select = document.getElementById('department');
-  const selected = select.options[select.selectedIndex];
-  if (!selected || !selected.dataset.id) return alert("❌ اختر القسم أولاً");
-  if (!confirm(`⚠️ هل تريد حذف القسم "${selected.value}"؟`)) return;
-  const res = await fetch(`${API_BASE}/api/departments/${selected.dataset.id}`, { method: 'DELETE' });
-  if (res.ok) loadDepartments();
-}
+    document.getElementById('videoForm').addEventListener('submit', async e => {
+      e.preventDefault();
+      const title = document.getElementById('title').value;
+      const url = document.getElementById('url').value;
+      const description = quill.root.innerHTML;
+      const department = document.getElementById('department').value;
 
-// إضافة الفيديو
-document.getElementById('videoForm').addEventListener('submit', async e => {
-  e.preventDefault();
-  const title = document.getElementById('title').value;
-  const url = document.getElementById('url').value;
-  const description = quill.root.innerHTML;
-  const department = document.getElementById('department').value;
+      const response = await fetch(`${API_BASE}/api/videos`, {
+        method: 'POST', headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ title, link: url, url, description, department })
+      });
 
-  const response = await fetch(`${API_BASE}/api/videos`, {
-    method: 'POST', headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify({ title, link: url, url, description, department })
-  });
-
-  if (response.ok) {
-    document.getElementById('confirmation').textContent = '✅ تم إضافة الفيديو بنجاح';
-    document.getElementById('confirmation').classList.remove('d-none');
-    document.getElementById('videoForm').reset();
-    quill.setContents([]);
-    document.getElementById('preview').innerHTML = '';
-    loadDepartments();
-  } else {
-    alert('حدث خطأ أثناء الإضافة.');
-  }
-});
-
-loadDepartments();
-</script>
-
-<!-- ✅ حماية تسجيل الدخول -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-  fetch("/api/check-session")
-    .then(res => res.json())
-    .then(data => {
-      if (!data.authenticated) {
-        // ❌ الجلسة غير صالحة → اعرض نافذة تسجيل الدخول
-        fetch("login-modal.html")
-          .then(res => res.text())
-          .then(html => {
-            document.getElementById("loginModalContainer").innerHTML = html;
-
-            const passwordModalEl = document.getElementById("passwordModal");
-            const passwordModal = new bootstrap.Modal(passwordModalEl, {
-              backdrop: 'static',
-              keyboard: false
-            });
-            passwordModal.show();
-
-            // إخفاء زر الإغلاق العلوي ✖
-            document.querySelectorAll("#passwordModal .btn-close")
-              .forEach(btn => btn.style.display = "none");
-
-            // زر إلغاء → العودة للرئيسية
-            const cancelBtn = document.querySelector("#passwordModal .btn-secondary");
-            if (cancelBtn) {
-              cancelBtn.addEventListener("click", () => {
-                window.location.href = "index.html";
-              });
-            }
-
-            const passwordInput = document.getElementById("dashboardPassword");
-
-            // ✅ التركيز بعد الفتح
-            passwordModalEl.addEventListener("shown.bs.modal", () => {
-              passwordInput.focus();
-            });
-
-            // ✅ وظيفة التحقق
-            async function verifyPassword() {
-              const password = passwordInput.value;
-              const res = await fetch("/api/verify-password", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ password })
-              });
-
-              if (res.status === 200) {
-                passwordModal.hide();
-              } else {
-                alert("❌ كلمة المرور غير صحيحة");
-                passwordInput.value = "";
-                passwordInput.focus();
-              }
-            }
-
-            // عند الضغط على زر دخول
-            document.getElementById("confirmDashboardAccess")
-              .addEventListener("click", verifyPassword);
-
-            // عند الضغط على Enter
-            passwordInput.addEventListener("keydown", function (e) {
-              if (e.key === "Enter") {
-                verifyPassword();
-              }
-            });
-          });
+      if (response.ok) {
+        document.getElementById('confirmation').textContent = '✅ تم إضافة الفيديو بنجاح';
+        document.getElementById('confirmation').classList.remove('d-none');
+        document.getElementById('videoForm').reset();
+        quill.setContents([]);
+        document.getElementById('preview').innerHTML = '';
+        loadDepartments();
+      } else {
+        alert('حدث خطأ أثناء الإضافة.');
       }
     });
-</script>
+
+    loadDepartments();
+  </script>
+
+  <!-- ✅ الحماية من ملف موحّد -->
+  <script src="login-guard.js"></script>
 </body>
 </html>
