--- a/public/links.html
+++ b/public/links.html
@@ -168,65 +168,9 @@
     });
 
     loadLinks();
-
-    // ✅ تحميل نافذة تسجيل الدخول
-    fetch("login-modal.html")
-      .then(res => res.text())
-      .then(html => {
-        document.getElementById("loginModalContainer").innerHTML = html;
-
-        const passwordModalEl = document.getElementById("passwordModal");
-        const passwordModal = new bootstrap.Modal(passwordModalEl, {
-          backdrop: 'static',
-          keyboard: false
-        });
-        passwordModal.show();
-
-        // إخفاء زر الإغلاق العلوي ✖
-        document.querySelectorAll("#passwordModal .btn-close")
-          .forEach(btn => btn.style.display = "none");
-
-        // زر إلغاء → العودة للرئيسية
-        const cancelBtn = document.querySelector("#passwordModal .btn-secondary");
-        if (cancelBtn) {
-          cancelBtn.addEventListener("click", () => {
-            window.location.href = "index.html";
-          });
-        }
-
-        const passwordInput = document.getElementById("dashboardPassword");
-
-        // ✅ ضمان التركيز بعد فتح النافذة بالكامل
-        passwordModalEl.addEventListener("shown.bs.modal", function () {
-          passwordInput.focus();
-        });
-
-        async function verifyPassword() {
-          const password = passwordInput.value;
-          const res = await fetch("/api/verify-password", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ password })
-          });
-
-          if (res.status === 200) {
-            passwordModal.hide();
-          } else {
-            alert("❌ كلمة المرور غير صحيحة");
-            passwordInput.value = "";
-            passwordInput.focus();
-          }
-        }
-
-        document.getElementById("confirmDashboardAccess")
-          .addEventListener("click", verifyPassword);
-
-        passwordInput.addEventListener("keydown", function (e) {
-          if (e.key === "Enter") {
-            verifyPassword();
-          }
-        });
-      });
   </script>
+
+  <!-- ✅ استدعاء ملف الحماية الموحّد -->
+  <script src="login-guard.js"></script>
 </body>
 </html>
