--- a/public/edit.html
+++ b/public/edit.html
@@ -7,106 +7,77 @@
   <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
   <style>
     body {
-      background-color: #f4f6fb;
-      padding: 20px;
+      background-color: #f8f9fa;
+      padding: 30px;
       font-family: 'Segoe UI', sans-serif;
     }
     .video-card {
       background: white;
-      border-radius: 12px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      padding: 12px;
-      margin: 5px;
-      width: 300px;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      padding: 15px;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+      margin-bottom: 15px;
     }
-    .video-card:hover {
-      transform: scale(1.02);
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+    iframe, video {
+      width: 100%;
+      height: 300px;
+      border-radius: 8px;
+      margin-top: 10px;
     }
     .video-title {
       font-weight: bold;
-      margin-bottom: 6px;
-      min-height: 48px;
-      overflow: hidden;
-      display: -webkit-box;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
     }
     .video-description {
-      color: #0d6efd;
+      margin: 10px 0;
       cursor: pointer;
-      min-height: 40px;
-      overflow: hidden;
-      display: -webkit-box;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
-      margin-bottom: 8px;
-    }
-    .video-grid {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 15px;
-    }
-    video, iframe {
-      width: 100%;
-      height: 200px;
-      border-radius: 6px;
-    }
-    .sharepoint-frame {
-      width: 100%;
-      height: 200px;
-      border-radius: 6px;
-      display: block;
-      object-fit: cover;
+      color: #0d6efd;
     }
     .popout-button {
+      margin: 10px 0;
       background-color: #0d6efd;
       color: white;
       border: none;
-      padding: 6px 12px;
-      border-radius: 5px;
+      padding: 5px 10px;
+      border-radius: 6px;
       cursor: pointer;
-      margin-top: 6px;
     }
     .action-buttons {
-      display: flex;
-      justify-content: space-between;
       margin-top: 10px;
-    }
-    #editor {
-      height: 200px;
-      background: white;
+      display: flex;
+      gap: 10px;
     }
   </style>
 </head>
 <body>
-  <div class="container text-center">
-    <h3 class="mb-4">إدارة وتعديل الفيديوهات</h3>
-    <div class="mb-3 d-flex justify-content-center gap-3">
-      <a href="add.html" class="btn btn-success">➕ إضافة فيديو جديد</a>
-      <a href="dashboard.html" class="btn btn-warning">🔐 لوحة التحكم</a>
+  <div class="container">
+    <div class="d-flex justify-content-between align-items-center mb-4">
+      <h3>تعديل الفيديوهات</h3>
+      <a href="dashboard.html" class="btn btn-outline-info">لوحة التحكم</a>
     </div>
-    <select id="departmentSelect" class="form-select mb-3" style="max-width: 300px; margin: auto;">
-      <option value="">-- اختر القسم --</option>
-    </select>
-    <input id="searchInput" class="form-control mb-4" type="text" placeholder="ابحث بعنوان أو وصف الفيديو..." disabled>
-    <div id="videoContainer" class="video-grid"></div>
+
+    <div class="row mb-3">
+      <div class="col-md-4">
+        <select id="departmentSelect" class="form-select">
+          <option value="">-- اختر القسم --</option>
+        </select>
+      </div>
+      <div class="col-md-8">
+        <input id="searchInput" class="form-control" type="text" placeholder="🔍 بحث عن فيديو" disabled>
+      </div>
+    </div>
+
+    <div id="videoContainer"></div>
   </div>
 
-  <!-- نافذة عرض الوصف -->
+  <!-- نافذة وصف الفيديو -->
   <div class="modal fade" id="descModal" tabindex="-1">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="descTitle"></h5>
+          <h5 id="descTitle" class="modal-title"></h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
         </div>
-        <div class="modal-body" id="descContent" style="white-space: pre-wrap; text-align: justify;"></div>
+        <div id="descContent" class="modal-body"></div>
       </div>
     </div>
   </div>
@@ -121,30 +92,37 @@
         </div>
         <div class="modal-body">
           <input type="hidden" id="editId">
-          <label>العنوان</label>
-          <input type="text" class="form-control mb-2" id="editTitle">
-          <label>الوصف</label>
-          <div id="editor"></div>
-          <label class="mt-3">رابط الفيديو</label>
-          <input type="text" class="form-control mb-2" id="editUrl">
-          <label>القسم</label>
-          <select class="form-select mb-2" id="editDeptSelect" required>
-            <option value="">-- اختر القسم --</option>
-          </select>
+          <div class="mb-3">
+            <label class="form-label">العنوان</label>
+            <input id="editTitle" type="text" class="form-control">
+          </div>
+          <div class="mb-3">
+            <label class="form-label">الرابط</label>
+            <input id="editUrl" type="text" class="form-control">
+          </div>
+          <div class="mb-3">
+            <label class="form-label">الوصف</label>
+            <div id="editor"></div>
+          </div>
+          <div class="mb-3">
+            <label class="form-label">القسم</label>
+            <select id="editDeptSelect" class="form-select"></select>
+          </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">إغلاق</button>
-          <button type="button" class="btn btn-primary" onclick="saveEdit()">حفظ</button>
+          <button class="btn btn-primary" onclick="saveEdit()">💾 حفظ</button>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- استدعاء نافذة تسجيل الدخول -->
+  <!-- ✅ استدعاء نافذة تسجيل الدخول -->
   <div id="loginModalContainer"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+  <!-- ✅ الحارس الموحد -->
+  <script src="login-guard.js"></script>
   <script>
   let videos = [];
   let departments = [];
@@ -160,73 +138,6 @@
       ]
     }
   });
-
-  // ✅ تحميل نافذة تسجيل الدخول كما في dashboard.html
-  fetch("login-modal.html")
-    .then(res => res.text())
-    .then(html => {
-      document.getElementById("loginModalContainer").innerHTML = html;
-
-      const passwordModal = new bootstrap.Modal(document.getElementById("passwordModal"), {
-        backdrop: 'static',
-        keyboard: false
-      });
-
-      const passwordInput = document.getElementById("dashboardPassword");
-      const submitPassword = document.getElementById("submitPassword");
-      const closeModal = document.querySelector("#passwordModal .btn-close");
-
-      // إخفاء زر الإغلاق
-      if (closeModal) closeModal.style.display = "none";
-
-      // إظهار نافذة تسجيل الدخول عند فتح الصفحة
-      passwordModal.show();
-      document.getElementById("passwordModal").addEventListener("shown.bs.modal", () => {
-        passwordInput.focus();
-      });
-
-      // عند الضغط على إدخال أو زر الدخول
-      function tryLogin() {
-        const password = passwordInput.value.trim();
-        fetch("/api/verify-password", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ password })
-        })
-          .then(res => res.json())
-          .then(data => {
-            if (data.success) {
-              sessionStorage.setItem("isLoggedIn", "true");
-              passwordModal.hide();
-            } else {
-              alert("❌ كلمة المرور غير صحيحة");
-              passwordInput.value = "";
-              passwordInput.focus();
-            }
-          })
-          .catch(() => alert("⚠️ خطأ في الاتصال بالخادم"));
-      }
-
-      passwordInput.addEventListener("keypress", e => {
-        if (e.key === "Enter") tryLogin();
-      });
-      submitPassword.addEventListener("click", tryLogin);
-
-      // عند الضغط على زر إلغاء => توجيه إلى dashboard.html
-      const cancelBtn = document.getElementById("cancelBtn");
-      if (cancelBtn) {
-        cancelBtn.addEventListener("click", () => {
-          window.location.href = "dashboard.html";
-        });
-      }
-
-      // عند إغلاق النافذة => توجيه إلى dashboard.html
-      document.getElementById("passwordModal").addEventListener("hidden.bs.modal", () => {
-        if (!sessionStorage.getItem("isLoggedIn")) {
-          window.location.href = "dashboard.html";
-        }
-      });
-    });
 
   async function fetchDepartments() {
     try {
