--- a/public/viewlinks.html
+++ b/public/viewlinks.html
@@ -161,7 +161,7 @@
   <div class="container mt-4 text-center">
     <div class="table-responsive">
       <table class="table table-bordered table-hover text-center align-middle">
-        <thead class="table-dark">
+        <thead class="table-Primary">
           <tr>
             <th>#</th>
             <th>وصف</th>
