--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -68,6 +68,14 @@
           <a href="index.html">الرئيسية</a>
         </div>
       </div>
+<!-- here-->
+ <div class="col-md-4">
+        <div class="dashboard-card">
+          <div class="card-icon">🔗</div> 
+          <a href="viewlinks.html">عرض الروابط</a>
+        </div>
+      </div>
+<!-- end here-->
       <div class="col-md-4">
         <div class="dashboard-card">
           <div class="card-icon">🔗</div>
