--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -71,7 +71,7 @@
 <!-- here-->
  <div class="col-md-4">
         <div class="dashboard-card">
-          <div class="card-icon">🔗</div> 
+          <div class="card-icon">👁️</div> 
           <a href="viewlinks.html">عرض الروابط</a>
         </div>
       </div>
