--- a/public/change-password.html
+++ b/public/change-password.html
@@ -56,7 +56,7 @@
       const newPassword = document.getElementById("newPassword").value;
 
       try {
-        const response = await fetch("/api/change-dashboard-password", {
+        const response = await fetch("/api/change-password", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ currentPassword, newPassword })
