--- a/public/change-password.html
+++ b/public/change-password.html
@@ -50,13 +50,16 @@
     const form = document.getElementById("changePasswordForm");
     const alertBox = document.getElementById("alertBox");
 
+    // 🟢 غير هذا إلى رابط السيرفر على Render
+    const API_BASE = "https://video-dashboard.onrender.com";
+
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
       const currentPassword = document.getElementById("currentPassword").value;
       const newPassword = document.getElementById("newPassword").value;
 
       try {
-        const response = await fetch("/api/change-password", {
+        const response = await fetch(`${API_BASE}/api/change-password`, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ currentPassword, newPassword })
@@ -82,7 +85,6 @@
     });
   </script>
 
-  <!-- ✅ استدعاء الحماية -->
   <script src="login-guard.js"></script>
 </body>
 </html>
