--- a/public/change-password.html
+++ b/public/change-password.html
@@ -51,7 +51,7 @@
     const alertBox = document.getElementById("alertBox");
 
     // 🟢 غير هذا إلى رابط السيرفر على Render
-    const API_BASE = "https://video-dashboard.onrender.com";
+const API_BASE = "https://video-dashboard-backend.onrender.com";
 
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
