--- a/public/change-password.html
+++ b/public/change-password.html
@@ -47,43 +47,61 @@
   </div>
 
   <script>
-    const form = document.getElementById("changePasswordForm");
-    const alertBox = document.getElementById("alertBox");
+  const form = document.getElementById("changePasswordForm");
+  const alertBox = document.getElementById("alertBox");
 
-    // 🟢 غير هذا إلى رابط السيرفر على Render
-const API_BASE = "https://video-dashboard-backend.onrender.com";
+  // رابط السيرفر على Render
+  const API_BASE = "https://video-dashboard-backend.onrender.com";
 
-    form.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const currentPassword = document.getElementById("currentPassword").value;
-      const newPassword = document.getElementById("newPassword").value;
+  form.addEventListener("submit", async (e) => {
+    e.preventDefault();
+    const currentPassword = document.getElementById("currentPassword").value;
+    const newPassword = document.getElementById("newPassword").value;
 
-      try {
-        const response = await fetch(`${API_BASE}/api/change-password`, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ currentPassword, newPassword })
-        });
+    try {
+      // 🟢 أولاً: التحقق من كلمة المرور الحالية
+      const verifyRes = await fetch(`${API_BASE}/api/verify-password`, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ password: currentPassword })
+      });
 
-        const data = await response.json();
+      const verifyData = await verifyRes.json();
 
-        if (response.ok) {
-          alertBox.className = "alert alert-success mt-3";
-          alertBox.textContent = "✅ تم تغيير كلمة المرور بنجاح!";
-          alertBox.classList.remove("d-none");
-          form.reset();
-        } else {
-          alertBox.className = "alert alert-danger mt-3";
-          alertBox.textContent = "❌ " + (data.error || "فشل تغيير كلمة المرور");
-          alertBox.classList.remove("d-none");
-        }
-      } catch (err) {
+      if (!verifyRes.ok || !verifyData.success) {
         alertBox.className = "alert alert-danger mt-3";
-        alertBox.textContent = "⚠️ خطأ في الاتصال بالخادم";
+        alertBox.textContent = "❌ كلمة المرور الحالية غير صحيحة";
+        alertBox.classList.remove("d-none");
+        return;
+      }
+
+      // 🟢 ثانياً: إذا صحيحة → نغيّر كلمة المرور
+      const response = await fetch(`${API_BASE}/api/change-password`, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ currentPassword, newPassword })
+      });
+
+      const data = await response.json();
+
+      if (response.ok && data.success) {
+        alertBox.className = "alert alert-success mt-3";
+        alertBox.textContent = "✅ تم تغيير كلمة المرور بنجاح!";
+        alertBox.classList.remove("d-none");
+        form.reset();
+      } else {
+        alertBox.className = "alert alert-danger mt-3";
+        alertBox.textContent = "❌ " + (data.error || "فشل تغيير كلمة المرور");
         alertBox.classList.remove("d-none");
       }
-    });
-  </script>
+    } catch (err) {
+      alertBox.className = "alert alert-danger mt-3";
+      alertBox.textContent = "⚠️ خطأ في الاتصال بالخادم";
+      alertBox.classList.remove("d-none");
+    }
+  });
+</script>
+
 
   <script src="login-guard.js"></script>
 </body>
