--- a/public/passwords.html
+++ b/public/passwords.html
@@ -4,62 +4,123 @@
   <meta charset="UTF-8">
   <title>إدارة كلمات المرور</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <style>
     body { background-color: #f4f6f9; padding: 20px; font-family: 'Segoe UI', sans-serif; }
     .password-card { background: white; padding: 20px; border-radius: 12px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); margin-bottom: 15px; }
     table td, table th { vertical-align: middle; }
+    .toast-container { position: fixed; top: 20px; left: 50%; transform: translateX(-50%); z-index: 9999; }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h2 class="mb-4">🔑 إدارة كلمات المرور</h2>
+<div class="text-end mb-3">
+  <button id="logoutBtn" class="btn btn-danger">تسجيل الخروج</button>
+</div>
 
-    <div class="password-card">
-      <form id="addPasswordForm" class="row g-3">
-        <div class="col-md-5">
-          <input type="text" class="form-control" id="section" placeholder="اسم القسم أو الجزء" required>
+<div class="container">
+  <h2 class="mb-4">🔑 إدارة كلمات المرور</h2>
+
+  <!-- نموذج الإضافة -->
+  <div class="password-card">
+    <form id="addPasswordForm" class="row g-3">
+      <div class="col-md-4">
+        <input type="text" class="form-control" id="section" placeholder="اسم القسم أو الجزء" required>
+      </div>
+      <div class="col-md-4">
+        <div class="input-group">
+          <input type="password" class="form-control" id="password" placeholder="كلمة المرور" required>
+          <button type="button" class="btn btn-outline-secondary" id="togglePassword">👁</button>
         </div>
-        <div class="col-md-5">
-          <div class="input-group">
-            <input type="password" class="form-control" id="password" placeholder="كلمة المرور" required>
-            <button type="button" class="btn btn-outline-secondary" id="togglePassword">👁</button>
+      </div>
+      <div class="col-md-2">
+        <button type="submit" class="btn btn-primary w-100">➕ إضافة</button>
+      </div>
+      <div class="col-md-2">
+        <input type="text" class="form-control" id="searchBox" placeholder="🔍 بحث...">
+      </div>
+    </form>
+  </div>
+
+  <!-- الجدول -->
+  <table class="table table-bordered table-striped mt-4">
+    <thead class="table-dark">
+      <tr>
+        <th>القسم</th>
+        <th>كلمة المرور</th>
+        <th>تاريخ الإضافة</th>
+        <th>إجراءات</th>
+      </tr>
+    </thead>
+    <tbody id="passwordsTable"></tbody>
+  </table>
+</div>
+
+<!-- نافذة تعديل -->
+<div class="modal fade" id="editModal" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <form id="editPasswordForm">
+        <div class="modal-header">
+          <h5 class="modal-title">✏️ تعديل كلمة المرور</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body">
+          <input type="hidden" id="editId">
+          <div class="mb-3">
+            <label class="form-label">اسم القسم</label>
+            <input type="text" class="form-control" id="editSection" required>
+          </div>
+          <div class="mb-3">
+            <label class="form-label">كلمة المرور</label>
+            <input type="text" class="form-control" id="editPassword" required>
           </div>
         </div>
-        <div class="col-md-2">
-          <button type="submit" class="btn btn-primary w-100">➕ إضافة</button>
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-primary">💾 حفظ</button>
         </div>
       </form>
     </div>
-
-    <table class="table table-bordered table-striped mt-4">
-      <thead class="table-dark">
-        <tr>
-          <th>القسم</th>
-          <th>كلمة المرور</th>
-          <th>تاريخ الإضافة</th>
-          <th>إجراءات</th>
-        </tr>
-      </thead>
-      <tbody id="passwordsTable"></tbody>
-    </table>
   </div>
+</div>
 
+<!-- Toast -->
+<div class="toast-container" id="toastContainer"></div>
+
+<!-- ✅ نافذة تسجيل الدخول -->
+<div id="loginModalContainer"></div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="login-guard.js"></script>
 <script>
 const API_URL = '/api/passwords';
+let allPasswords = [];
 
-// عرض أو إخفاء كلمة المرور في النموذج
-document.getElementById('togglePassword').addEventListener('click', () => {
-  const pwField = document.getElementById('password');
-  pwField.type = pwField.type === 'password' ? 'text' : 'password';
-});
+// دالة عرض Toast
+function showToast(message, type="success") {
+  const toast = document.createElement('div');
+  toast.className = `toast align-items-center text-bg-${type} border-0 mb-2`;
+  toast.setAttribute('role', 'alert');
+  toast.innerHTML = `
+    <div class="d-flex">
+      <div class="toast-body">${message}</div>
+      <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
+    </div>`;
+  document.getElementById('toastContainer').appendChild(toast);
+  new bootstrap.Toast(toast, { delay: 2000 }).show();
+}
 
 // تحميل جميع كلمات المرور
 async function loadPasswords() {
   const res = await fetch(API_URL);
-  const data = await res.json();
+  allPasswords = await res.json();
+  renderPasswords(allPasswords);
+}
+
+// عرض الجدول
+function renderPasswords(list) {
   const table = document.getElementById('passwordsTable');
   table.innerHTML = '';
-  data.forEach(p => {
+  list.forEach(p => {
     const tr = document.createElement('tr');
     tr.innerHTML = `
       <td>${p.section}</td>
@@ -69,7 +130,7 @@ async function loadPasswords() {
       </td>
       <td>${new Date(p.dateAdded).toLocaleString()}</td>
       <td>
-        <button class="btn btn-warning btn-sm" onclick="editPassword('${p._id}', '${p.section}', '${p.password}')">✏️ تعديل</button>
+        <button class="btn btn-warning btn-sm" onclick="openEditModal('${p._id}', '${p.section}', '${p.password}')">✏️ تعديل</button>
         <button class="btn btn-danger btn-sm" onclick="deletePassword('${p._id}')">🗑️ حذف</button>
       </td>
     `;
@@ -95,29 +156,60 @@ document.getElementById('addPasswordForm').addEventListener('submit', async (e) 
     body: JSON.stringify({ section, password })
   });
   e.target.reset();
+  showToast("✅ تم إضافة كلمة المرور بنجاح");
   loadPasswords();
 });
 
+// فتح نافذة التعديل
+function openEditModal(id, section, password) {
+  document.getElementById('editId').value = id;
+  document.getElementById('editSection').value = section;
+  document.getElementById('editPassword').value = password;
+  new bootstrap.Modal(document.getElementById('editModal')).show();
+}
+
 // تعديل كلمة مرور
-async function editPassword(id, section, password) {
-  const newSection = prompt('اسم القسم:', section);
-  if (!newSection) return;
-  const newPassword = prompt('كلمة المرور:', password);
-  if (!newPassword) return;
+document.getElementById('editPasswordForm').addEventListener('submit', async (e) => {
+  e.preventDefault();
+  const id = document.getElementById('editId').value;
+  const section = document.getElementById('editSection').value;
+  const password = document.getElementById('editPassword').value;
   await fetch(`${API_URL}/${id}`, {
     method: 'PUT',
     headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify({ section: newSection, password: newPassword })
+    body: JSON.stringify({ section, password })
   });
+  showToast("✏️ تم تعديل كلمة المرور");
   loadPasswords();
-}
+  bootstrap.Modal.getInstance(document.getElementById('editModal')).hide();
+});
 
 // حذف كلمة مرور
 async function deletePassword(id) {
   if (!confirm('هل أنت متأكد من الحذف؟')) return;
   await fetch(`${API_URL}/${id}`, { method: 'DELETE' });
+  showToast("🗑️ تم الحذف بنجاح", "danger");
   loadPasswords();
 }
+
+// فلترة
+document.getElementById('searchBox').addEventListener('input', e => {
+  const query = e.target.value.toLowerCase();
+  const filtered = allPasswords.filter(p => p.section.toLowerCase().includes(query));
+  renderPasswords(filtered);
+});
+
+// زر عرض/إخفاء كلمة المرور في النموذج
+document.getElementById('togglePassword').addEventListener('click', () => {
+  const pwField = document.getElementById('password');
+  pwField.type = pwField.type === 'password' ? 'text' : 'password';
+});
+
+// تسجيل الخروج
+document.getElementById("logoutBtn").addEventListener("click", () => {
+  sessionStorage.removeItem("loggedInAt");
+  window.location.href = "index.html";
+});
 
 loadPasswords();
 </script>
