--- a/public/passwords.html
+++ b/public/passwords.html
@@ -207,11 +207,13 @@ document.getElementById('togglePassword').addEventListener('click', () => {
 
 // تسجيل الخروج
 document.getElementById("logoutBtn").addEventListener("click", () => {
-  sessionStorage.removeItem("loggedInAt");
+  sessionStorage.removeItem("loggedInAt_passwords");
   window.location.href = "index.html";
 });
 
 loadPasswords();
 </script>
+
+  
 </body>
 </html>
