--- a/public/passwords.html
+++ b/public/passwords.html
@@ -208,7 +208,7 @@ document.getElementById('togglePassword').addEventListener('click', () => {
 // تسجيل الخروج
 document.getElementById("logoutBtn").addEventListener("click", () => {
   sessionStorage.removeItem("loggedInAt_passwords");
-  window.location.href = "index.html";
+  window.location.href = "dashboard.html";
 });
 
 loadPasswords();
