--- a/public/passwords.html
+++ b/public/passwords.html
@@ -13,9 +13,12 @@
   </style>
 </head>
 <body>
+ 
 <div class="text-end mb-3">
+  <button id="dashboardBtn" class="btn btn-secondary me-2">لوحة التحكم</button>
   <button id="logoutBtn" class="btn btn-danger">تسجيل الخروج</button>
 </div>
+
 
 <div class="container">
   <h2 class="mb-4">🔑 إدارة كلمات المرور</h2>
@@ -205,10 +208,15 @@ document.getElementById('togglePassword').addEventListener('click', () => {
   pwField.type = pwField.type === 'password' ? 'text' : 'password';
 });
 
+// زر لوحة التحكم
+  document.getElementById("dashboardBtn").addEventListener("click", () => {
+    window.location.href = "dashboard.html";
+  });
+  
 // تسجيل الخروج
 document.getElementById("logoutBtn").addEventListener("click", () => {
   sessionStorage.removeItem("loggedInAt_passwords");
-  window.location.href = "dashboard.html";
+  window.location.href = "index.html";
 });
 
 loadPasswords();
