--- a/public/passwords.html
+++ b/public/passwords.html
@@ -50,7 +50,7 @@
       <tr>
         <th>القسم</th>
         <th>كلمة المرور</th>
-        <th>تاريخ الإضافة</th>
+  <!--      <th>تاريخ الإضافة</th> -->
         <th>إجراءات</th>
       </tr>
     </thead>
